# ARTMe

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CornerTable.h  CornerTableAdaptiveRefinement.h  DefinitionTypes.h  ManagerTriangleLevels.h  ManagerUndoOperations.h  UndoRedoRefinement.h
src/: CornerTable.cpp  CornerTableAdaptiveRefinement.cpp  ManagerTriangleLevels.cpp  ManagerUndoOperations.cpp  UndoRedoRefinement.cpp  main.cpp
